--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </ul>
                         <h2>Navigate</h2>
                         <ul>
-                            <li><a href="../HTML/Shrines">Shrines</a></li>
+                            <li><a href="HTML/Shrines/Xenoblade">Shrines</a></li>
                             <li><a href="#webring">Buttons</a></li>
                             <li><a href="#changelog">Changelog</a></li>
                             <li><a href="#about">About Me</a></li>
@@ -87,10 +87,11 @@
                     <div id="changelog">
                         <h1>Site Changelog</h1>
                         <p>
-                            Release 7:<br>
+                            Release 8:<br>
                             <ul>
-                                <li>Xenblade shrine now has a mock loading screen</li>
-                                <li>Started work on implementing theme menu within shrine</li>
+                                <li>Xenoblade 2 title screen replica now features a theme switcher (Chapter Select)</li>
+                                <li>For the most part the title screen replica is finished! The work on the actual shrine begins now!</li>
+                                <li>Shrines button now directly links to Xenoblade shrine as no other one will be implemented for a while.</li>
                             </ul>
                             <a href="/MISC/changelogs.txt" target="_blank">View changelog history</a>
                         </p>
@@ -142,7 +143,7 @@
             </div>
 
             <div id="footer">
-                <p>Website Design by Ringo Origo (Ringori) - Last Updated Nov.14.2024</p>
+                <p>Website Design by Ringo Origo (Ringori) - Last Updated Nov.15.2024</p>
             </div>
 
         </div>
