--- a/HTML/Shrines/index.html
+++ b/HTML/Shrines/index.html
@@ -16,10 +16,12 @@
         <meta content="#27376a" data-react-helmet="true" name="theme-color" />
     </head>
     <body>
-        <p>This page isn't here yet, but it'll be a small menu to access all of my shrines when I get around to making them. In fact, this
-            page won't even match CSS with the home page by the time I'm finished.
+        <p>This page isn't here yet, but it'll be a small menu to access all of my shrines when I get around to making them.
+            For now, this is just a list of links to shrines and a button to go back.
         </p>
-        <a href="../Shrines/Xenoblade/">I've started working on my Xenoblade 2 Shrine!!</a>
-        <a href="../../index.html">Click here to go back</a>
+        <ul>
+            <li><a href="../Shrines/Xenoblade/" style="color:white;">Shrine: Xenoblade Chronicles 2</a></li>
+            <li><a href="../../index.html" style="color:white;">Click here to go back</a></li>
+        </ul>
     </body>
 </html>
